fix: new api rest convetions routes defs
