# api/app/routes/v1/Base.routes.ts
@@ -7,8 +7,8 @@ const baseController = new BaseController();
 
 baseRoutes
   .get("/", (req, res) => baseController.getBases(req, res))
-  .post("/add", (req, res) => baseController.addBase(req, res))
-  .patch("/update/:idBase", (req, res) => baseController.updateBase(req, res))
-  .delete("/delete/:idBase", (req, res) => baseController.deleteBase(req, res));
+  .post("/", (req, res) => baseController.addBase(req, res))
+  .patch("/:idBase", (req, res) => baseController.updateBase(req, res))
+  .delete("/:idBase", (req, res) => baseController.deleteBase(req, res));
 
 export default baseRoutes;
