# api/app/routes/v1/Channel.routes.ts
@@ -7,14 +7,12 @@ const channelController = new ChannelController();
 
 channelRoutes
   .get("/", (req, res) => channelController.getChannels(req, res))
-  .get("/number/:numberChannel", (req, res) =>
+  .post("/", (req, res) => channelController.addChannel(req, res))
+  .get("/:numberChannel", (req, res) =>
     channelController.getChannelByNumber(req, res)
   )
-  .post("/add", (req, res) => channelController.addChannel(req, res))
-  .patch("/update/:idChannel", (req, res) =>
-    channelController.updateChannel(req, res)
-  )
-  .delete("/delete/:idChannel", (req, res) =>
+  .patch("/:idChannel", (req, res) => channelController.updateChannel(req, res))
+  .delete("/:idChannel", (req, res) =>
     channelController.deleteChannel(req, res)
   );
 
